(#1) Import files from agent-stuff that I use in new system

--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20.14.3",
     "@zxing/text-encoding": "^0.9.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "array.prototype.findlast": "^1.2.3",
     "await-lock": "^2.2.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -165,6 +167,7 @@
     "multiformats": "^13.1.0",
     "nanoid": "^5.0.5",
     "normalize-url": "^8.0.0",
+    "openai": "^4.86.2",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "psl": "^1.9.0",
@@ -242,7 +245,7 @@
     "babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
     "babel-preset-expo": "^12.0.2",
     "eslint": "^8.19.0",
-    "eslint-plugin-bsky-internal": "link:./eslint",
+    "eslint-plugin-bsky-internal": "file:./eslint",
     "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-lingui": "^0.2.0",
     "eslint-plugin-react": "^7.33.2",
