--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "base64-js": "^1.5.1",
     "bcp-47": "^2.1.0",
     "bcp-47-match": "^2.0.3",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^2.30.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "email-validator": "^2.0.4",
@@ -177,6 +178,7 @@
     "openai": "^4.86.2",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
+    "process": "^0.11.10",
     "psl": "^1.9.0",
     "radix-ui": "^1.2.0",
     "react": "19.0.0",
@@ -218,6 +220,8 @@
     "tippy.js": "^6.3.7",
     "tlds": "^1.234.0",
     "tldts": "^6.1.46",
+    "verusd-rpc-ts-client": "git+https://github.com/mcstoer/verusd-rpc-ts-client.git#credential-class",
+    "verusid-ts-client": "git+https://github.com/mcstoer/verusid-ts-client.git#credential-class",
     "zeego": "^1.6.2",
     "zod": "^3.20.2"
   },
@@ -246,6 +250,7 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
