--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20.14.3",
     "@zxing/text-encoding": "^0.9.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "array.prototype.findlast": "^1.2.3",
     "await-lock": "^2.2.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -173,6 +175,7 @@
     "multiformats": "9.9.0",
     "nanoid": "^5.0.5",
     "normalize-url": "^8.0.0",
+    "openai": "^4.86.2",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
@@ -253,7 +256,7 @@
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "babel-preset-expo": "~13.1.11",
     "eslint": "^8.19.0",
-    "eslint-plugin-bsky-internal": "link:./eslint",
+    "eslint-plugin-bsky-internal": "file:./eslint",
     "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lingui": "^0.2.0",
