--- a/vskysigningserver/.env.example
+++ b/vskysigningserver/.env.example
@@ -1,7 +1,7 @@
 BASE_URL=http://localhost:25000
 BASE_WEBHOOK_URL=http://localhost:21001
 
-IADDRESS=
+EXPO_PUBLIC_IADDRESS=
 WIF=
 DEFAULT_CHAIN=VRSCTEST
 DEFAULT_URL=https://api.verustest.net
