--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ EXPO_PUBLIC_LOG_LEVEL=debug
 EXPO_PUBLIC_LOG_DEBUG=
 EXPO_PUBLIC_BUNDLE_IDENTIFIER=
 EXPO_PUBLIC_BUNDLE_DATE=0
+
+# VerusSky Specific Environment Variables
+EXPO_PUBLIC_IADDRESS=
+DEFAULT_CHAIN=VRSCTEST
+DEFAULT_URL=https://api.verustest.net
+VERUS_RPC_USERNAME=
+VERUS_RPC_PASSWORD=
+VERUS_RPC_SERVER=http://127.0.0.1:18843/
