Update the .env example to match the new formatting.

--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,26 @@ EXPO_PUBLIC_SENTRY_DSN=
 # Bitdrift API key. If undefined, Bitdrift will be disabled.
 EXPO_PUBLIC_BITDRIFT_API_KEY=
 
-# VerusSky Specific Environment Variables
+#
+#
+# VerusSky specific values
+#
+#
+
+# The iaddress used to sign the requests on behalf of the app.
 EXPO_PUBLIC_IADDRESS=
+
+# Chain to use for Verus operations.
 DEFAULT_CHAIN=VRSCTEST
+
+# URL of the public Verus rpc server.
 DEFAULT_URL=https://api.verustest.net
+
+# Username for the local Verus RPC server.
 VERUS_RPC_USERNAME=
+
+# Password for the local Verus RPC server.
 VERUS_RPC_PASSWORD=
+
+# URL of the local Verus RPC server.
 VERUS_RPC_SERVER=http://127.0.0.1:18843/
