--- a/.env.example
+++ b/.env.example
@@ -46,20 +46,11 @@ BAPP_CONFIG_DEV_BYPASS_SECRET=
 #
 #
 
-# The iaddress used to sign the requests on behalf of the app.
+# The iaddress or name used to sign the requests on behalf of the app.
 EXPO_PUBLIC_IADDRESS=
 
 # Chain to use for Verus operations.
 DEFAULT_CHAIN=VRSCTEST
 
-# URL of the public Verus rpc server.
+# URL of a public Verus rpc server.
 DEFAULT_URL=https://api.verustest.net
-
-# Username for the local Verus RPC server.
-VERUS_RPC_USERNAME=
-
-# Password for the local Verus RPC server.
-VERUS_RPC_PASSWORD=
-
-# URL of the local Verus RPC server.
-VERUS_RPC_SERVER=http://127.0.0.1:18843/
