--- a/package.json
+++ b/package.json
@@ -74,218 +74,218 @@
     "dev:run": "yarn concurrently \"yarn web\" \"cd vskysigningserver && yarn dev\" --names \"web,signing\" --prefix-colors \"blue,yellow\""
   },
   "dependencies": {
-    "@atproto/api": "^0.18.0",
-    "@bitdrift/react-native": "^0.6.8",
-    "@braintree/sanitize-url": "^6.0.2",
-    "@bsky.app/alf": "^0.1.5",
+    "@atproto/api": "0.18.0",
+    "@bitdrift/react-native": "0.6.8",
+    "@braintree/sanitize-url": "6.0.4",
+    "@bsky.app/alf": "0.1.5",
     "@bsky.app/react-native-mmkv": "2.12.5",
     "@discord/bottom-sheet": "bluesky-social/react-native-bottom-sheet",
-    "@emoji-mart/react": "^1.1.1",
-    "@expo/html-elements": "^0.12.5",
-    "@expo/webpack-config": "^19.0.1",
-    "@floating-ui/dom": "^1.6.3",
-    "@floating-ui/react-dom": "^2.0.8",
-    "@formatjs/intl-locale": "^4.2.8",
-    "@formatjs/intl-numberformat": "^8.15.1",
-    "@formatjs/intl-pluralrules": "^5.4.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@emoji-mart/react": "1.1.1",
+    "@expo/html-elements": "0.12.5",
+    "@expo/webpack-config": "19.0.1",
+    "@floating-ui/dom": "1.6.3",
+    "@floating-ui/react-dom": "2.0.8",
+    "@formatjs/intl-locale": "4.2.8",
+    "@formatjs/intl-numberformat": "8.15.1",
+    "@formatjs/intl-pluralrules": "5.4.1",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-native-fontawesome": "0.3.2",
     "@haileyok/bluesky-video": "0.3.2",
-    "@ipld/dag-cbor": "^9.2.0",
-    "@lingui/react": "^4.14.1",
+    "@ipld/dag-cbor": "9.2.1",
+    "@lingui/react": "4.14.1",
     "@mattermost/react-native-paste-input": "mattermost/react-native-paste-input",
-    "@miblanchard/react-native-slider": "^2.6.0",
-    "@mozzius/expo-dynamic-app-icon": "^1.8.0",
+    "@miblanchard/react-native-slider": "2.6.0",
+    "@mozzius/expo-dynamic-app-icon": "1.8.0",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/bottom-tabs": "^7.3.13",
-    "@react-navigation/drawer": "^7.3.12",
-    "@react-navigation/native": "^7.1.9",
-    "@react-navigation/native-stack": "^7.3.13",
-    "@sentry/react-native": "~6.20.0",
-    "@tanstack/query-async-storage-persister": "^5.25.0",
-    "@tanstack/react-query": "^5.8.1",
-    "@tanstack/react-query-persist-client": "^5.25.0",
-    "@tiptap/core": "^2.9.1",
-    "@tiptap/extension-document": "^2.9.1",
-    "@tiptap/extension-hard-break": "^2.9.1",
-    "@tiptap/extension-history": "^2.9.1",
-    "@tiptap/extension-mention": "^2.9.1",
-    "@tiptap/extension-paragraph": "^2.9.1",
-    "@tiptap/extension-placeholder": "^2.9.1",
-    "@tiptap/extension-text": "^2.9.1",
-    "@tiptap/html": "^2.9.1",
-    "@tiptap/pm": "^2.9.1",
-    "@tiptap/react": "^2.9.1",
-    "@tiptap/suggestion": "^2.9.1",
-    "@types/invariant": "^2.2.37",
-    "@types/lodash.throttle": "^4.1.9",
-    "@types/node": "^20.14.3",
-    "@zxing/text-encoding": "^0.9.0",
-    "array.prototype.findlast": "^1.2.3",
-    "await-lock": "^2.2.2",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "bcp-47": "^2.1.0",
-    "bcp-47-match": "^2.0.3",
-    "crypto-browserify": "^3.12.1",
-    "date-fns": "^2.30.0",
-    "email-validator": "^2.0.4",
-    "emoji-mart": "^5.5.2",
-    "emoji-regex": "^10.4.0",
-    "eventemitter3": "^5.0.1",
-    "expo": "^54.0.22",
-    "expo-application": "~7.0.7",
-    "expo-blur": "~15.0.7",
-    "expo-build-properties": "~1.0.9",
-    "expo-camera": "~17.0.9",
-    "expo-clipboard": "~8.0.7",
-    "expo-dev-client": "~6.0.16",
-    "expo-device": "~8.0.9",
-    "expo-file-system": "~19.0.17",
-    "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-image-crop-tool": "^0.4.0",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-intent-launcher": "~13.0.7",
-    "expo-keep-awake": "^15.0.7",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-localization": "~17.0.7",
-    "expo-location": "~19.0.7",
-    "expo-media-library": "~18.2.0",
-    "expo-notifications": "~0.32.12",
-    "expo-screen-orientation": "~9.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-system-ui": "~6.0.8",
-    "expo-task-manager": "~14.0.8",
-    "expo-updates": "~29.0.12",
-    "expo-video": "~3.0.13",
-    "expo-web-browser": "~15.0.9",
-    "fast-text-encoding": "^1.0.6",
-    "history": "^5.3.0",
-    "hls.js": "^1.6.2",
+    "@react-navigation/bottom-tabs": "7.3.14",
+    "@react-navigation/drawer": "7.4.1",
+    "@react-navigation/native": "7.1.10",
+    "@react-navigation/native-stack": "7.3.14",
+    "@sentry/react-native": "6.20.0",
+    "@tanstack/query-async-storage-persister": "5.25.0",
+    "@tanstack/react-query": "5.8.1",
+    "@tanstack/react-query-persist-client": "5.25.0",
+    "@tiptap/core": "2.9.1",
+    "@tiptap/extension-document": "2.9.1",
+    "@tiptap/extension-hard-break": "2.9.1",
+    "@tiptap/extension-history": "2.9.1",
+    "@tiptap/extension-mention": "2.9.1",
+    "@tiptap/extension-paragraph": "2.9.1",
+    "@tiptap/extension-placeholder": "2.9.1",
+    "@tiptap/extension-text": "2.9.1",
+    "@tiptap/html": "2.9.1",
+    "@tiptap/pm": "2.9.1",
+    "@tiptap/react": "2.9.1",
+    "@tiptap/suggestion": "2.9.1",
+    "@types/invariant": "2.2.37",
+    "@types/lodash.throttle": "4.1.9",
+    "@types/node": "20.17.6",
+    "@zxing/text-encoding": "0.9.0",
+    "array.prototype.findlast": "1.2.3",
+    "await-lock": "2.2.2",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "bcp-47": "2.1.0",
+    "bcp-47-match": "2.0.3",
+    "crypto-browserify": "3.12.1",
+    "date-fns": "3.6.0",
+    "email-validator": "2.0.4",
+    "emoji-mart": "5.5.2",
+    "emoji-regex": "10.4.0",
+    "eventemitter3": "5.0.1",
+    "expo": "54.0.22",
+    "expo-application": "7.0.7",
+    "expo-blur": "15.0.7",
+    "expo-build-properties": "1.0.9",
+    "expo-camera": "17.0.9",
+    "expo-clipboard": "8.0.7",
+    "expo-dev-client": "6.0.16",
+    "expo-device": "8.0.9",
+    "expo-file-system": "19.0.17",
+    "expo-font": "14.0.9",
+    "expo-haptics": "15.0.7",
+    "expo-image": "3.0.10",
+    "expo-image-crop-tool": "0.4.0",
+    "expo-image-manipulator": "14.0.7",
+    "expo-image-picker": "17.0.8",
+    "expo-intent-launcher": "13.0.7",
+    "expo-keep-awake": "15.0.7",
+    "expo-linear-gradient": "15.0.7",
+    "expo-linking": "8.0.8",
+    "expo-localization": "17.0.7",
+    "expo-location": "19.0.7",
+    "expo-media-library": "18.2.0",
+    "expo-notifications": "0.32.12",
+    "expo-screen-orientation": "9.0.7",
+    "expo-sharing": "14.0.7",
+    "expo-splash-screen": "31.0.10",
+    "expo-system-ui": "6.0.8",
+    "expo-task-manager": "14.0.8",
+    "expo-updates": "29.0.12",
+    "expo-video": "3.0.13",
+    "expo-web-browser": "15.0.9",
+    "fast-text-encoding": "1.0.6",
+    "history": "5.3.0",
+    "hls.js": "1.6.2",
     "ini": "5.0.0",
-    "js-sha256": "^0.9.0",
-    "jwt-decode": "^4.0.0",
-    "lande": "^1.0.10",
-    "lodash.chunk": "^4.2.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.isequal": "^4.5.0",
-    "lodash.shuffle": "^4.2.0",
-    "lodash.throttle": "^4.1.1",
+    "js-sha256": "0.9.0",
+    "jwt-decode": "4.0.0",
+    "lande": "1.0.10",
+    "lodash.chunk": "4.2.0",
+    "lodash.debounce": "4.0.8",
+    "lodash.isequal": "4.5.0",
+    "lodash.shuffle": "4.2.0",
+    "lodash.throttle": "4.1.1",
     "multiformats": "9.9.0",
-    "nanoid": "^5.0.5",
-    "normalize-url": "^8.0.0",
-    "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
-    "process": "^0.11.10",
-    "psl": "^1.9.0",
-    "radix-ui": "^1.4.3",
+    "nanoid": "5.0.5",
+    "normalize-url": "8.0.0",
+    "patch-package": "8.0.1",
+    "postinstall-postinstall": "2.1.0",
+    "process": "0.11.10",
+    "psl": "1.9.0",
+    "radix-ui": "1.4.3",
     "react": "19.1.0",
-    "react-compiler-runtime": "^19.1.0-rc.1",
+    "react-compiler-runtime": "19.1.0-rc.1",
     "react-dom": "19.1.0",
-    "react-image-crop": "^11.0.7",
-    "react-is": "19",
-    "react-keyed-flatten-children": "^5.0.0",
+    "react-image-crop": "11.0.7",
+    "react-is": "19.1.0",
+    "react-keyed-flatten-children": "5.0.0",
     "react-native": "0.81.5",
-    "react-native-compressor": "^1.13.0",
-    "react-native-date-picker": "^5.0.13",
-    "react-native-device-attest": "^0.1.6",
-    "react-native-drawer-layout": "^4.1.8",
-    "react-native-edge-to-edge": "^1.6.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-get-random-values": "~1.11.0",
+    "react-native-compressor": "1.13.0",
+    "react-native-date-picker": "5.0.13",
+    "react-native-device-attest": "0.1.6",
+    "react-native-drawer-layout": "4.1.10",
+    "react-native-edge-to-edge": "1.6.0",
+    "react-native-gesture-handler": "2.28.0",
+    "react-native-get-random-values": "1.11.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-pager-view": "6.8.0",
     "react-native-progress": "bluesky-social/react-native-progress",
-    "react-native-qrcode-styled": "^0.3.3",
-    "react-native-reanimated": "^3.19.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-qrcode-styled": "0.3.3",
+    "react-native-reanimated": "3.19.1",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-uitextview": "^1.4.0",
-    "react-native-url-polyfill": "^1.3.0",
-    "react-native-uuid": "^2.0.3",
-    "react-native-view-shot": "^4.0.3",
-    "react-native-web": "^0.21.0",
-    "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^13.13.5",
-    "react-remove-scroll-bar": "^2.3.8",
-    "react-responsive": "^10.0.1",
-    "react-textarea-autosize": "^8.5.3",
-    "sonner": "^2.0.7",
-    "sonner-native": "^0.21.0",
-    "statsig-react-native-expo": "^4.6.1",
-    "tippy.js": "^6.3.7",
-    "tlds": "^1.234.0",
-    "tldts": "^6.1.46",
+    "react-native-uitextview": "1.4.0",
+    "react-native-url-polyfill": "1.3.0",
+    "react-native-uuid": "2.0.3",
+    "react-native-view-shot": "4.0.3",
+    "react-native-web": "0.21.1",
+    "react-native-web-webview": "1.0.2",
+    "react-native-webview": "13.15.0",
+    "react-remove-scroll-bar": "2.3.8",
+    "react-responsive": "10.0.1",
+    "react-textarea-autosize": "8.5.3",
+    "sonner": "2.0.7",
+    "sonner-native": "0.21.0",
+    "statsig-react-native-expo": "4.6.1",
+    "tippy.js": "6.3.7",
+    "tlds": "1.242.0",
+    "tldts": "6.1.46",
     "verus-typescript-primitives": "git+https://github.com/mcstoer/verus-typescript-primitives.git#key-updates-and-additions",
     "verusd-rpc-ts-client": "git+https://github.com/VerusCoin/verusd-rpc-ts-client.git",
     "verusid-ts-client": "git+https://github.com/michaeltout/verusid-ts-client.git",
-    "zod": "^3.20.2"
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@atproto/dev-env": "^0.3.181",
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/runtime": "^7.26.0",
-    "@expo/config-plugins": "~54.0.1",
-    "@lingui/cli": "^4.14.1",
-    "@lingui/macro": "^4.14.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@atproto/dev-env": "0.3.181",
+    "@babel/core": "7.26.0",
+    "@babel/preset-env": "7.26.0",
+    "@babel/runtime": "7.26.0",
+    "@expo/config-plugins": "54.0.1",
+    "@lingui/cli": "4.14.1",
+    "@lingui/macro": "4.14.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
     "@react-native/babel-preset": "0.81.5",
-    "@react-native/eslint-config": "^0.81.5",
-    "@react-native/typescript-config": "^0.81.5",
-    "@sentry/webpack-plugin": "^3.2.2",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^13.2.0",
+    "@react-native/eslint-config": "0.81.5",
+    "@react-native/typescript-config": "0.81.5",
+    "@sentry/webpack-plugin": "3.2.2",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "13.2.0",
     "@types/jest": "29.5.14",
-    "@types/lodash.chunk": "^4.2.7",
-    "@types/lodash.debounce": "^4.0.7",
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/lodash.shuffle": "^4.2.7",
-    "@types/psl": "^1.1.1",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.2.1",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "babel-plugin-react-compiler": "^19.1.0-rc.3",
-    "babel-preset-expo": "~54.0.0",
-    "concurrently": "^9.2.0",
-    "eslint": "^8.19.0",
+    "@types/lodash.chunk": "4.2.7",
+    "@types/lodash.debounce": "4.0.7",
+    "@types/lodash.isequal": "4.5.6",
+    "@types/lodash.shuffle": "4.2.7",
+    "@types/psl": "1.1.1",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "babel-jest": "29.7.0",
+    "babel-loader": "9.2.1",
+    "babel-plugin-macros": "3.1.0",
+    "babel-plugin-module-resolver": "5.0.2",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "babel-preset-expo": "54.0.2",
+    "concurrently": "9.2.0",
+    "eslint": "8.47.0",
     "eslint-plugin-bsky-internal": "link:./eslint",
-    "eslint-plugin-ft-flow": "^2.0.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-lingui": "^0.2.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
-    "eslint-plugin-react-native-a11y": "^3.3.0",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-ft-flow": "2.0.3",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-lingui": "0.2.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-native-a11y": "3.3.0",
+    "eslint-plugin-simple-import-sort": "12.0.0",
     "file-loader": "6.2.0",
-    "husky": "^8.0.3",
-    "is-ci": "^3.0.1",
-    "jest": "^29.7.0",
-    "jest-expo": "~54.0.13",
-    "jest-junit": "^16.0.0",
-    "lint-staged": "^13.2.3",
-    "lockfile-lint": "^4.14.0",
-    "metro-react-native-babel-preset": "^0.77.0",
-    "prettier": "^3.6.0",
-    "react-native-dotenv": "^3.4.11",
-    "react-refresh": "^0.14.0",
-    "svgo": "^3.3.2",
-    "ts-node": "^10.9.1",
-    "ts-plugin-sort-import-suggestions": "^1.0.4",
-    "typescript": "^5.9.2",
-    "webpack-bundle-analyzer": "^4.10.1"
+    "husky": "8.0.3",
+    "is-ci": "3.0.1",
+    "jest": "29.7.0",
+    "jest-expo": "54.0.13",
+    "jest-junit": "16.0.0",
+    "lint-staged": "13.3.0",
+    "lockfile-lint": "4.14.0",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "3.6.0",
+    "react-native-dotenv": "3.4.11",
+    "react-refresh": "0.14.0",
+    "svgo": "3.3.2",
+    "ts-node": "10.9.1",
+    "ts-plugin-sort-import-suggestions": "1.0.4",
+    "typescript": "5.9.2",
+    "webpack-bundle-analyzer": "4.10.1"
   },
   "resolutions": {
     "@react-native/babel-preset": "0.81.5",
