--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
     "expo-location": "19.0.8",
     "expo-media-library": "18.2.1",
     "expo-notifications": "0.32.14",
-    "expo-privacy-sensitive": "^0.1.0",
+    "expo-privacy-sensitive": "0.1.0",
     "expo-screen-orientation": "9.0.8",
     "expo-sharing": "14.0.8",
     "expo-sms": "14.0.8",
@@ -240,7 +240,7 @@
     "@babel/core": "7.26.0",
     "@babel/preset-env": "7.26.0",
     "@babel/runtime": "7.26.0",
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "9.39.2",
     "@expo/config-plugins": "54.0.1",
     "@lingui/cli": "4.14.1",
     "@lingui/macro": "4.14.1",
@@ -266,19 +266,19 @@
     "babel-plugin-module-resolver": "5.0.2",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "babel-preset-expo": "54.0.2",
-    "eslint": "^9.39.2",
-    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint": "9.39.2",
+    "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-bsky-internal": "link:./eslint",
-    "eslint-plugin-import-x": "^4.16.1",
-    "eslint-plugin-lingui": "^0.11.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-native": "^5.0.0",
-    "eslint-plugin-react-native-a11y": "^3.5.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-import-x": "4.16.1",
+    "eslint-plugin-lingui": "0.11.0",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "eslint-plugin-react-hooks": "7.0.1",
+    "eslint-plugin-react-native": "5.0.0",
+    "eslint-plugin-react-native-a11y": "3.5.1",
+    "eslint-plugin-simple-import-sort": "12.1.1",
     "file-loader": "6.2.0",
-    "globals": "^17.0.0",
+    "globals": "17.0.0",
     "husky": "8.0.3",
     "is-ci": "3.0.1",
     "jest": "29.7.0",
@@ -293,7 +293,7 @@
     "ts-node": "10.9.1",
     "ts-plugin-sort-import-suggestions": "1.0.4",
     "typescript": "5.9.2",
-    "typescript-eslint": "^8.53.0",
+    "typescript-eslint": "8.53.0",
     "webpack-bundle-analyzer": "4.10.1"
   },
   "resolutions": {
